--- a/AoC2023.cabal
+++ b/AoC2023.cabal
@@ -18,5 +18,5 @@ executable AoC
   other-modules:       Harness, Day1.Main, Day2.Main, Day3.Main, Day4.Main, Day5.Main, Day6.Main, Day7.Main, Day8.Main, Day9.Main, Day10.Main, Day11.Main, Day12.Main, Day13.Main, Day14.Main, Day15.Main, Day16.Main, Day17.Main, Day18.Main, Day19.Main, Day20.Main, Day21.Main, Day22.Main, Day23.Main, Day24.Main, Day25.Main
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5, lens, parsec, containers, transformers, mtl, pqueue
-  default-extensions:  TupleSections, TemplateHaskell, FunctionalDependencies, LambdaCase, FlexibleContexts
+  build-depends:       base >= 4.7 && < 5, lens, parsec, containers, transformers, mtl, pqueue, MemoTrie
+  default-extensions:  TupleSections, TemplateHaskell, FunctionalDependencies, LambdaCase, FlexibleContexts, DeriveGeneric, TypeOperators, TypeFamilies
